src/app.css
:root {
	--primary-bg-color: #253c78;
	--secondary-color: #2b59c3;
	--primary-text-color: white;
	--secondary-text-color: white;
	--highlights-color: #253c78;
	--links-color: #d3d0cb;

	--font-family: 'Mono', monospace;
	--font-size-h2: 5.2vmin;
	--font-size-h3: 4.2vmin;
	--cursor-blink-duration: 1.5s;
}

html {
	background-color: var(--secondary-color);
	color: var(--primary-text-color);
	font-family: sans-serif;
}

body {
	margin: 0;
	padding: 0;
}

p,
ul {
	font-size: 4.5vmin;
}

h1,
h2,
h3 {
	z-index: 1;
}

@media screen and (min-width: 850px) {
	.header {
		max-height: 400px;
	}
	h2,
	h3 {
		font-size: 46px;
	}

	p,
	ul {
		font-size: 30px;
	}
}

